# condamcp

./: README.md  demo.py  pyproject.toml
src/condamcp/: __init__.py  async_cmd.py  commandlr.py  conda_server.py  condabuild.py  condabuild_server.py  condacmd.py  server.py  sysinfo_server.py  utils.py
tests/: test_async_cmd.py  test_conda_build.py  test_conda_cmd.py
